# GalvoTracker

./: .gitignore  README.md  TEST.py  adjustment.py  apt_protocol.py  calibrate.py  calibrate_camera_and_ir_laser.py  calibrate_camera_and_laser.py  calibrate_chessboard.py  calibrate_color.py  chessboard_pattern.py  codeprofile2.txt  codeprofile4.txt  constant_vel_test.py  filter_coefficient_test.py  ir_image_tracking.py  line_test.py  load_measurements.py  main.py  measure_calibration_error.py  measure_calibration_error_by_scanning_lines.py  measure_calibration_error_chessboard.py  measure_calibration_error_with_mouse.py  measure_calibration_error_with_target_plane.py  mid_parameters.pkl  mirror_gui.py  motor_and_power_meter_controller.py  move_and_measure.py  move_and_measure_2d.py  optimize_calibration.py  parameters.pkl  path.py  perform_horizontal_test.py  perform_test.py  perform_vertical_test.py  point_laser_to_mouse_position.py  point_laser_to_mouse_position_kf.py  pywhycon_track_target_with_laser.py  pywhycon_track_target_with_laser_ir.py  pywhycon_track_target_with_laser_kf.py  (+13 more)
3d model/: Part1.ipt  Part2.ipt  Part2.stl
Vorlage 1 (Abschlussarbeit)_NEU/: Abschlussarbeit.aux  Abschlussarbeit.bbl  Abschlussarbeit.blg  Abschlussarbeit.fdb_latexmk  Abschlussarbeit.fls  Abschlussarbeit.lof  Abschlussarbeit.lot  Abschlussarbeit.tex  Abschlussarbeit.toc  pdflatex5468.fls
mirror/: line_test.py  (+5 more)
pywhycon/: .gitignore  CMakeLists.txt  circle_detector.cpp  circle_detector.h  circle_detector_wrapper.cpp  localization_system.cpp  main.cpp  test.py  test_circle_detector.cpp
(+347 files in other folders)
